crates/axt-ctxpack/tests/snapshots/modes__ctxpack_agent.snap
---
source: crates/axt-ctxpack/tests/modes.rs
expression: "String::from_utf8(agent.get_output().stdout.clone())?"
---
{"schema":"axt.ctxpack.summary.v1","type":"summary","ok":true,"root":".","patterns":1,"files_scanned":1,"files_matched":1,"hits":4,"warnings":0,"bytes_scanned":280,"truncated":false,"next":["axt-ctxpack ../../fixtures/axt-ctxpack/src/lib.rs --pattern 'todo=TODO' --context 2 --agent"]}
{"schema":"axt.ctxpack.hit.v1","type":"hit","pat":"todo","p":"../../fixtures/axt-ctxpack/src/lib.rs","line":2,"col":6,"range":{"start":46,"end":50},"k":"string","src":"ast","l":"rust","node":"string_content","sym":"build_message","text":"TODO","snippet":"2:    \"TODO in a string\""}
{"schema":"axt.ctxpack.hit.v1","type":"hit","pat":"todo","p":"../../fixtures/axt-ctxpack/src/lib.rs","line":5,"col":4,"range":{"start":70,"end":74},"k":"comment","src":"ast","l":"rust","node":"line_comment","sym":null,"text":"TODO","snippet":"5:// TODO: replace temporary fallback"}
{"schema":"axt.ctxpack.hit.v1","type":"hit","pat":"todo","p":"../../fixtures/axt-ctxpack/src/lib.rs","line":14,"col":21,"range":{"start":256,"end":260},"k":"test","src":"ast","l":"rust","node":"string_content","sym":"todo_test","text":"TODO","snippet":"14:        assert_eq!(\"TODO\", \"TODO\");"}
{"schema":"axt.ctxpack.hit.v1","type":"hit","pat":"todo","p":"../../fixtures/axt-ctxpack/src/lib.rs","line":14,"col":29,"range":{"start":264,"end":268},"k":"test","src":"ast","l":"rust","node":"string_content","sym":"todo_test","text":"TODO","snippet":"14:        assert_eq!(\"TODO\", \"TODO\");"}
