crates/axt-ctxpack/tests/snapshots/modes__ctxpack_json.snap
---
source: crates/axt-ctxpack/tests/modes.rs
expression: "String::from_utf8(envelope.get_output().stdout.clone())?"
---
{"schema":"axt.ctxpack.v1","ok":true,"data":{"root":".","patterns":[{"name":"todo","query":"TODO","kind":"regex"}],"summary":{"roots":1,"files_scanned":1,"files_matched":1,"hits":4,"warnings":0,"bytes_scanned":280,"truncated":false},"hits":[{"pattern":"todo","path":"../../fixtures/axt-ctxpack/src/lib.rs","line":2,"column":6,"byte_range":{"start":46,"end":50},"kind":"string","classification_source":"ast","language":"rust","node_kind":"string_content","enclosing_symbol":"build_message","ast_path":["string_content","string_literal","block","function_item","source_file"],"matched_text":"TODO","snippet":"2:    \"TODO in a string\""},{"pattern":"todo","path":"../../fixtures/axt-ctxpack/src/lib.rs","line":5,"column":4,"byte_range":{"start":70,"end":74},"kind":"comment","classification_source":"ast","language":"rust","node_kind":"line_comment","enclosing_symbol":null,"ast_path":["line_comment","source_file"],"matched_text":"TODO","snippet":"5:// TODO: replace temporary fallback"},{"pattern":"todo","path":"../../fixtures/axt-ctxpack/src/lib.rs","line":14,"column":21,"byte_range":{"start":256,"end":260},"kind":"test","classification_source":"ast","language":"rust","node_kind":"string_content","enclosing_symbol":"todo_test","ast_path":["string_content","string_literal","token_tree","macro_invocation","expression_statement","block","function_item","declaration_list","mod_item","source_file"],"matched_text":"TODO","snippet":"14:        assert_eq!(\"TODO\", \"TODO\");"},{"pattern":"todo","path":"../../fixtures/axt-ctxpack/src/lib.rs","line":14,"column":29,"byte_range":{"start":264,"end":268},"kind":"test","classification_source":"ast","language":"rust","node_kind":"string_content","enclosing_symbol":"todo_test","ast_path":["string_content","string_literal","token_tree","macro_invocation","expression_statement","block","function_item","declaration_list","mod_item","source_file"],"matched_text":"TODO","snippet":"14:        assert_eq!(\"TODO\", \"TODO\");"}],"warnings":[],"next":["axt-ctxpack ../../fixtures/axt-ctxpack/src/lib.rs --pattern 'todo=TODO' --context 2 --agent"]},"warnings":[],"errors":[]}
